[gd_scene load_steps=2 format=3 uid="uid://bp51e1b24a71c"]

[ext_resource type="Script" path="res://UI/stats.gd" id="1_1fypr"]

[node name="Stats" type="MarginContainer"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_1fypr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 151.0
offset_bottom = 171.0

[node name="AttrBox" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 126.0
offset_bottom = 26.0
size_flags_vertical = 3

[node name="Attr" type="Label" parent="VBoxContainer/AttrBox"]
offset_right = 61.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="VBoxContainer/AttrBox"]
offset_left = 65.0
offset_top = 1.0
offset_right = 126.0
offset_bottom = 24.0
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttrBox2" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 126.0
offset_bottom = 56.0
size_flags_vertical = 3

[node name="Attr" type="Label" parent="VBoxContainer/AttrBox2"]
offset_right = 61.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="VBoxContainer/AttrBox2"]
offset_left = 65.0
offset_top = 1.0
offset_right = 126.0
offset_bottom = 24.0
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttrBox3" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 60.0
offset_right = 126.0
offset_bottom = 86.0
size_flags_vertical = 3

[node name="Attr" type="Label" parent="VBoxContainer/AttrBox3"]
offset_right = 122.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Score Multiplier"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="VBoxContainer/AttrBox3"]
offset_left = 126.0
offset_right = 126.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttrBox4" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 90.0
offset_right = 126.0
offset_bottom = 116.0
size_flags_vertical = 3

[node name="Attr" type="Label" parent="VBoxContainer/AttrBox4"]
offset_right = 61.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Length"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="VBoxContainer/AttrBox4"]
offset_left = 65.0
offset_top = 1.0
offset_right = 126.0
offset_bottom = 24.0
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttrBox5" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 120.0
offset_right = 126.0
offset_bottom = 146.0
size_flags_vertical = 3

[node name="Attr" type="Label" parent="VBoxContainer/AttrBox5"]
offset_right = 107.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Evade Chance"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="VBoxContainer/AttrBox5"]
offset_left = 111.0
offset_top = 1.0
offset_right = 126.0
offset_bottom = 24.0
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
